<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">DashClock Device Info Extension</string>
  <string name="extension_settings_title" formatted="false">Device Info Settings</string>
  <string name="extension_label" formatted="false">Device Info</string>
  <string name="extension_title" formatted="false">%s (%s)</string>
  <string name="extension_description">Displays general device information and hardware statistics</string>
  <string name="extension_expanded_body_uptime_format" formatted="false">Uptime: %dd %dh %dm %ds</string>
  <string name="extension_expanded_body_uptime_shortformat" formatted="false">Up: %dd %dh %dm</string>
  <string name="extension_expanded_body_uptime_unavailable">n/a</string>
  <string name="extension_expanded_body_cpu_line" formatted="false">CPU: %d%% used (%d %s)</string>
  <string name="extension_expanded_body_ram_line" formatted="false">RAM: %d%% used (%s of %s)</string>
  <string name="extension_status_cpu" formatted="false">CPU: %d%%</string>
  <string name="extension_status_ram" formatted="false">RAM: %d%%</string>
  <string name="action_settings">Settings</string>
  <string name="pref_use_alternate_device_name_title">Use custom device name</string>
  <string name="pref_show_friendly_version_name">Show friendly version name?</string>
  <string name="pref_alternate_device_name_title">Custom device name</string>
  <string name="pref_alternate_device_name_default">My Android</string>
  <string name="pref_show_uptime_title">Show uptime?</string>
  <string name="pref_show_cpu_usage_title">Show CPU usage?</string>
  <string name="pref_show_memory_usage_title">Show memory usage?</string>
</resources>