<PreferenceScreen
    android:title="@string/extension_settings_title"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <CheckBoxPreference
      android:key="use_alternate_device_name"
      android:title="@string/pref_use_alternate_device_name_title"
      android:defaultValue="false"
      android:disableDependentsState="false"/>

  <EditTextPreference
      android:key="alternate_device_name"
      android:title="@string/pref_alternate_device_name_title"
      android:defaultValue="@string/pref_alternate_device_name_default"
      android:selectAllOnFocus="true"
      android:inputType="textCapWords"
      android:capitalize="words"
      android:singleLine="true"
      android:maxLines="1"
      android:dependency="use_alternate_device_name"/>

  <CheckBoxPreference
      android:key="show_friendly_version_name"
      android:title="@string/pref_show_friendly_version_name"
      android:defaultValue="false"
      android:disableDependentsState="false"
      android:summary="(e.g. KitKat, Jelly Bean, etc)"/>

  <CheckBoxPreference
      android:key="show_device_uptime"
      android:title="@string/pref_show_uptime_title"
      android:defaultValue="true"/>

  <CheckBoxPreference
      android:key="show_device_cpu_usage"
      android:title="@string/pref_show_cpu_usage_title"
      android:defaultValue="true"/>

  <CheckBoxPreference
      android:key="show_device_memory_usage"
      android:title="@string/pref_show_memory_usage_title"
      android:defaultValue="true"/>

</PreferenceScreen>